--- a/index.html
+++ b/index.html
@@ -656,8 +656,8 @@
                         </div>
                     </div>
                     <!--/ .row-->
-                    <!-- <div class="col-md-4">
-                        <iframe width="360px" height="200px"
+                    <div class="col-md-4">
+                        <iframe width="340px" height="200px"
                             src="https://www.youtube.com/embed/r1dQ78m7nr4?si=sg908QZdexRjjxZ6"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -665,40 +665,40 @@
                     </div>
 
                     <div class="col-md-4">
-                        <iframe width="360px" height="200px"
+                        <iframe width="340px" height="200px"
                             src="https://www.youtube.com/embed/6ZW23qdMnXQ?si=7Vc5BchWxNe6rPfz"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                     <div class="col-md-4">
-                        <iframe width="360px" height="200px"
+                        <iframe width="340px" height="200px"
                             src="https://www.youtube.com/embed/CmVXpv0cJ18?si=Quth8wLckl2f0ALn"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                     <div class="col-md-4">
-                        <iframe width="360px" height="200px"
+                        <iframe width="340px" height="200px"
                             src="https://www.youtube.com/embed/555YP8-zpy4?si=DOrvP4dC1nXODKD2"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                     <div class="col-md-4">
-                        <iframe width="360px" height="200px"
+                        <iframe width="340px" height="200px"
                             src="https://www.youtube.com/embed/c-VasuJ6KiU?si=vjG5sCiMmXgBjBCN"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                     <div class="col-md-4">
-                        <iframe width="360px" height="200px"
+                        <iframe width="340px" height="200px"
                             src="https://www.youtube.com/embed/OClNo8JfPpw?si=1n-ee6yUyjvgtfbK"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    </div> -->
+                    </div>
 
                 </div>
                 <!--/ .container-->
@@ -790,10 +790,9 @@
                         <div class="col-md-6">
                             <div class="mapp">
                                 <iframe
-                                    src="https://www.google.com/maps/embed?pb=!4v1698249812766!6m8!1m7!1saKoq2ZA5pX-VscpK7_v8Og!2m2!1d26.2474146!2d85.7369508!3f76.44!4f7.46!5f0.7820865974627469"
-                                    width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"
-                                    referrerpolicy="no-referrer-when-downgrade">
-                                </iframe>
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3578.451665658806!2d85.7355096!3d26.2470007!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39edaf34515c4c1b%3A0x1b29cced7cef3648!2sBauka%20chowk%20Bharwara!5e0!3m2!1sen!2sin!4v1730099610743!5m2!1sen!2sin"
+                                    width="600" height="330" style="border:0;" allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"></iframe>
                             </div>
                         </div>
                     </div>
@@ -820,9 +819,11 @@
                                 <div id="collapseOne" class="panel-collapse collapse">
                                     <div class="panel-body">
                                         <div class="row">
-                                            <div class="col-md-12"><h5>EDGE English Classes was established in 2014 by
-                                                Khalique Sir with a mission to revolutionize English learning in
-                                                Bharwara.</h5></div>
+                                            <div class="col-md-12">
+                                                <h5>EDGE English Classes was established in 2014 by
+                                                    Khalique Sir with a mission to revolutionize English learning in
+                                                    Bharwara.</h5>
+                                            </div>
 
                                         </div>
                                     </div>
@@ -839,8 +840,9 @@
                                     <div class="panel-body">
                                         <div class="row">
                                             <div class="col-md-12">
-                                               <h5> We offer spoken English with grammar practice, as well as 11th and
-                                                12th-grade syllabus completion classes to support academic excellence.</h5>
+                                                <h5> We offer spoken English with grammar practice, as well as 11th and
+                                                    12th-grade syllabus completion classes to support academic
+                                                    excellence.</h5>
                                             </div>
                                         </div>
 
@@ -851,7 +853,8 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <h4 class="panel-title faq-hvr">
-                                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">3. Who is
+                                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">3. Who
+                                            is
                                             EDGE English Classes designed for?</a>
                                     </h4>
                                 </div>
@@ -859,8 +862,8 @@
                                     <div class="panel-body">
                                         <div class="row">
                                             <div class="col-md-12">
-                                              <h5>  Our classes are for anyone eager to improve their English language
-                                                skills, especially students in need of extra academic support.</h5>
+                                                <h5> Our classes are for anyone eager to improve their English language
+                                                    skills, especially students in need of extra academic support.</h5>
                                             </div>
                                         </div>
 
@@ -879,8 +882,8 @@
                                     <div class="panel-body">
                                         <div class="row">
                                             <div class="col-md-12">
-                                               <h5> Yes, every year, many students achieve top scores and significant
-                                                improvement, thanks to Khalique Sir’s focused guidance.</h5>
+                                                <h5> Yes, every year, many students achieve top scores and significant
+                                                    improvement, thanks to Khalique Sir’s focused guidance.</h5>
                                             </div>
                                         </div>
 
